// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders 1`] = `
@media  {
  .c-fIyQRr {
    border-collapse: separate;
    border-top-left-radius: var(--radii-0);
    border-top-right-radius: var(--radii-0);
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-jfdJeO {
    background: var(--colors-primaryDark);
  }

  .c-gkKNzf:last-child td:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-gkKNzf:last-child td:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-gNZPWF {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-gNZPWF:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-gNZPWF:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-dOcJjJ {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dOcJjJ:first-child {
    font-weight: bold;
  }

  tr:nth-child(odd) .c-dOcJjJ {
    background: white;
  }

  tr:nth-child(even) .c-dOcJjJ {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-fIyQRr-bMNbkP-size-md .c-dOcJjJ,
  .c-fIyQRr-bMNbkP-size-md .c-gNZPWF {
    height: var(--sizes-4);
  }

  .c-fIyQRr-bMNbkP-size-md .c-gNZPWF {
    height: var(--sizes-4);
  }
}

@media  {
  .c-fIyQRr-iliYStP-css {
    height: 100px;
    width: 400px;
    color: var(--colors-primary500);
  }
}

<div>
  <table
    class="c-fIyQRr c-fIyQRr-bMNbkP-size-md c-fIyQRr-iliYStP-css"
  >
    <thead
      class="c-jfdJeO"
    >
      <tr
        class="c-gkKNzf"
      >
        <th
          class="c-gNZPWF"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-gkKNzf"
      >
        <td
          class="c-dOcJjJ"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-gkKNzf"
      >
        <td
          class="c-dOcJjJ"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to lg 1`] = `
@media  {
  .c-fIyQRr {
    border-collapse: separate;
    border-top-left-radius: var(--radii-0);
    border-top-right-radius: var(--radii-0);
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-jfdJeO {
    background: var(--colors-primaryDark);
  }

  .c-gkKNzf:last-child td:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-gkKNzf:last-child td:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-gNZPWF {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-gNZPWF:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-gNZPWF:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-dOcJjJ {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dOcJjJ:first-child {
    font-weight: bold;
  }

  tr:nth-child(odd) .c-dOcJjJ {
    background: white;
  }

  tr:nth-child(even) .c-dOcJjJ {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-fIyQRr-bMNbkP-size-md .c-dOcJjJ,
  .c-fIyQRr-bMNbkP-size-md .c-gNZPWF {
    height: var(--sizes-4);
  }

  .c-fIyQRr-bMNbkP-size-md .c-gNZPWF {
    height: var(--sizes-4);
  }

  .c-fIyQRr-jbphKb-size-lg .c-dOcJjJ,
  .c-fIyQRr-jbphKb-size-lg .c-gNZPWF {
    height: var(--sizes-5);
  }

  .c-fIyQRr-jbphKb-size-lg .c-gNZPWF {
    height: var(--sizes-5);
  }
}

@media  {
  .c-fIyQRr-iliYStP-css {
    height: 100px;
    width: 400px;
    color: var(--colors-primary500);
  }
}

<div>
  <table
    class="c-fIyQRr c-fIyQRr-jbphKb-size-lg c-fIyQRr-iliYStP-css"
  >
    <thead
      class="c-jfdJeO"
    >
      <tr
        class="c-gkKNzf"
      >
        <th
          class="c-gNZPWF"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV"
    >
      <tr
        class="c-gkKNzf"
      >
        <td
          class="c-dOcJjJ"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-gkKNzf"
      >
        <td
          class="c-dOcJjJ"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
